# Jikan-api-discord-bot-rust

./: Cargo.toml  README.md  user_queries.json
src/: discord_handler.rs  jikan_api.rs  main.rs
