[package]
name = "terminal_app"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.22", features = ["json", "blocking"] }
tokio = { version = "1.46.1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
dotenv = "0.15.0"
serenity = { version = "0.12.4", default-features = false, features = [
    "client",
    "gateway",
    "model",
    "framework",
    "rustls_backend",
] }
